cluster/apps/monitoring/victoria-metrics/app/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmsingle
  namespace: monitoring
  annotations:
    gatus.io/enabled: "true"
spec:
  parentRefs:
    - name: internal-gateway
      namespace: networking
  hostnames:
    - "prom.home.${SECRET_DOMAIN}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: rfc1918-ips
      backendRefs:
        - name: vmsingle-stack
          port: 8428
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    gatus.io/enabled: "true"
spec:
  parentRefs:
    - name: internal-gateway
      namespace: networking
  hostnames:
    - "alertmanager.home.${SECRET_DOMAIN}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: rfc1918-ips
      backendRefs:
        - name: vmalertmanager-stack
          port: 9093
